--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --border-highlight-color: #ffd700;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,10 +28,20 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --border-highlight-color: #ffed4e;
 }
 
 .yellow-border {
-  border: 0.2rem solid #ffd700;
+  border: 0.2rem solid var(--border-highlight-color);
   border-radius: 8px;
-  padding: 0.5rem;
+  overflow: hidden;
+}
+
+.yellow-border p {
+  margin-bottom: 0;
+}
+
+.yellow-border img {
+  width: 100%;
+  display: block;
 }
